--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>UniverseClash</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="manga.css">
+    <style>
+        header {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(img/meliodas.jpg);
+    background-size: cover;
+    background-position: center;
+    height: 400px;
+}
+    </style>
 </head>
 <body>
     <!-- Navigation -->
