--- a/versus/goku_naruto.html
+++ b/versus/goku_naruto.html
@@ -80,6 +80,12 @@
             </div>
         </section>
 
+             <div class="fb-comments" data-href="https://gratiasbakugo.github.io/UniverseClash/versus/goku_naruto.html" data-width="550" data-numposts="1"></div>
+
+        
+
+              <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v20.0" nonce="4fU03x1i"></script>
        
     <footer>
         <p>&copy; 2024 Versus Manga. Tous droits réservés.</p>
