--- a/versus/goku_naruto.html
+++ b/versus/goku_naruto.html
@@ -74,8 +74,11 @@
             <h2> Goku (Dragon Ball Z) vs. Naruto Uzumaki (Naruto)</h2>
             <div class="versus">
                 <h3>Analyse :</h3>
-                <p><strong>Goku</strong> possède une puissance de combat colossale avec ses transformations et techniques comme le Kamehameha.</p>
-                <p><strong>Naruto</strong> est un ninja extrêmement polyvalent avec des capacités de combat variées et la puissance du Kyubi.</p>
+                <p><strong>Goku</strong> Goku possède une force surhumaine, une vitesse incroyable et des compétences  exceptionnelles.
+                    Il peut également se transformer en Super Saiyan, ce qui augmente considérablement sa puissance. De plus, il utilise des techniques
+                    comme le Kamehameha et le Genki Dama.</p>
+                <p><strong>Naruto</strong>  Naruto possède des compétences ninja, une grande maîtrise du chakra et peut utiliser des techniques telles
+                    que le Rasengan et le  Clone Jutsu. Il est aussi l'hôte du démon-renard Kurama, ce qui lui donne des pouvoirs supplémentaires.</p>
                 <p>Qui gagnerait dans un combat épique entre la puissance brute de Goku et la stratégie astucieuse de Naruto ?</p>
             </div>
         </section>
