--- a/index.html
+++ b/index.html
@@ -40,24 +40,63 @@
             <h1>SATE SATE SATE !!!!!!</h1>
     </header>
 
-    <!-- Section Articles -->
-    <section class="py-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="card mb-4">
-                        <img src="img/1.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">TGoku vs Naruto</h5>
-                            <p class="card-text">Un aperçu de l'article sur le manga XYZ...</p>
-                            <a href="versus/goku_naruto.html" class="btn btn-primary">Lire la suite</a>
-                        </div>
-                    </div>
-                </div>
-                <!-- Répéter les articles pour plus de cartes -->
-            </div>
+    <!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mon Blog de Manga</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        .container {
+            width: 80%;
+            margin: auto;
+            overflow: hidden;
+            padding: 20px;
+        }
+        .blog-section {
+            background: #fff;
+            padding: 20px;
+            margin: 20px 0;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .blog-section img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+        }
+        .blog-section h1 {
+            margin-top: 0;
+            font-size: 2em;
+            color: #333;
+        }
+        .blog-section p {
+            font-size: 1em;
+            color: #666;
+            margin: 10px 0;
+            line-height: 1.8;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <div class="blog-section">
+            <img src="https://via.placeholder.com/800x400" alt="Image du blog">
+            <h1>Titre de l'Article de Blog</h1>
+            <p><strong>Goku</strong> possède une force surhumaine, une vitesse incroyable et des compétences exceptionnelles. Il peut également se transformer en Super Saiyan, ce qui augmente considérablement sa puissance. De plus, il utilise des techniques comme le Kamehameha et le Genki Dama.</p>
+                <p><strong>Naruto</strong>  Naruto possède des compétences ninja, une grande maîtrise du chakra et peut utiliser des techniques telles que le Rasengan et le Clone Jutsu. Il est aussi l'hôte du démon-renard Kurama, ce qui lui donne des pouvoirs supplémentaires.</p>
+                <p>Qui gagnerait dans un combat épique entre la puissance brute de Goku et la stratégie astucieuse de Naruto ?</p>
         </div>
-    </section>
+    </div>
+</body>
+</html>
 
     <!-- Footer -->
     <footer class="bg-dark text-white text-center py-3">
