--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 <body>
     <div class="container">
         <div class="blog-section">
-            <img src="https://via.placeholder.com/800x400" alt="Image du blog">
-            <h1>Titre de l'Article de Blog</h1>
+            <img src="img/1.jpg" alt="Image du blog">
+            <h1>Naruto vs Goku</h1>
             <p><strong>Goku</strong> possède une force surhumaine, une vitesse incroyable et des compétences exceptionnelles. Il peut également se transformer en Super Saiyan, ce qui augmente considérablement sa puissance. De plus, il utilise des techniques comme le Kamehameha et le Genki Dama.</p>
                 <p><strong>Naruto</strong>  Naruto possède des compétences ninja, une grande maîtrise du chakra et peut utiliser des techniques telles que le Rasengan et le Clone Jutsu. Il est aussi l'hôte du démon-renard Kurama, ce qui lui donne des pouvoirs supplémentaires.</p>
                 <p>Qui gagnerait dans un combat épique entre la puissance brute de Goku et la stratégie astucieuse de Naruto ?</p>
