--- a/index.html
+++ b/index.html
@@ -37,55 +37,9 @@
 
     <!-- Header -->
     <header class="">
-            <h1>SATE SATE SATE !!!!!!</h1>
+            <h1 class="h1">SATE SATE SATE !!!!!!</h1>
     </header>
 
-    <!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mon Blog de Manga</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-        }
-        .container {
-            width: 80%;
-            margin: auto;
-            overflow: hidden;
-            padding: 20px;
-        }
-        .blog-section {
-            background: #fff;
-            padding: 20px;
-            margin: 20px 0;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .blog-section img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 8px;
-        }
-        .blog-section h1 {
-            margin-top: 0;
-            font-size: 2em;
-            color: #333;
-        }
-        .blog-section p {
-            font-size: 1em;
-            color: #666;
-            margin: 10px 0;
-            line-height: 1.8;
-        }
-    </style>
-</head>
-<body>
     <div class="container">
         <div class="blog-section">
             <img src="img/1.jpg" alt="Image du blog">
@@ -95,8 +49,6 @@
                 <p>Qui gagnerait dans un combat épique entre la puissance brute de Goku et la stratégie astucieuse de Naruto ?</p>
         </div>
     </div>
-</body>
-</html>
 
     <!-- Footer -->
     <footer class="bg-dark text-white text-center py-3">
