--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <header class="">
             <h1 class="h1">SATE SATE SATE !!!!!!</h1>
     </header>
+<!-- debut -->
 
     <div class="container">
         <div class="blog-section">
@@ -50,6 +51,13 @@
         </div>
     </div>
 
+               <div class="fb-comments" data-href="https://gratiasbakugo.github.io/UniverseClash/" data-width="550" data-numposts="100"></div>
+<!-- fin -->
+
+
+
+    <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/fr_FR/sdk.js#xfbml=1&version=v20.0" nonce="CxEPlGmk"></script>
     <!-- Footer -->
     <footer class="bg-dark text-white text-center py-3">
         <p>&copy; 2024 MangaWorld. Tous droits réservés.</p>
