--- a/index.html
+++ b/index.html
@@ -25,16 +25,19 @@
             font-size: 1.5rem;
             font-weight: bold;
         }
+        .navbar {
+            padding: 30px;
+        }
     </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-light">
         <!-- Titre centré -->
-        <a class="navbar-brand mx-auto" href="#">Mon Titre</a>
+        <a class="navbar-brand mx-auto" href="#">UniverseClash</a>
 
         <!-- Image ronde à droite -->
         <div class="ml-auto">
-            <img src="image.jpg" alt="Profil" class="profile-img">
+            <img src="image.jpg" alt="Profil" class="a.jpg">
         </div>
     </nav>
 
