--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-light">
         <!-- Titre centré -->
-        <a class="navbar-brand mx-auto" href="#">UniverseClash</a>
+        <a class="navbar-brand mx-auto" href="index.html">UniverseClash</a>
 
         <!-- Image ronde à droite -->
         <div class="ml-auto">
-            <img src="image.jpg" alt="Profil" class="a.jpg">
+            <a href="https://www.facebook.com/profile.php?id=100076267658645"><img src="a.jpg" alt="" class="profile-img"></a>
         </div>
     </nav>
 
